@@ -48,11 +48,11 @@ evaltime is main, trigger is visible-constructor-static, 2 write()s; dynamic loa
 
 Constructor run.
 main() run.
-evaltime is default, trigger is visible-constructor, 2 write()s; dynamic loader syscalls not seen.
+evaltime is default, trigger is visible-constructor, 1 write()s; dynamic loader syscalls not seen.
 
 Constructor run.
 main() run.
-evaltime is default, trigger is visible-constructor-static-unstripped, 2 write()s; dynamic loader syscalls seen.
+evaltime is default, trigger is visible-constructor-static-unstripped, 1 write()s; dynamic loader syscalls not seen.
 
 Constructor run.
 main() run.
